# paras-rover-ros1

./: .gitignore
src/master_node/: CMakeLists.txt  package.xml
src/master_node/launch/: master.launch  rover.launch
src/master_node/scripts/: master_node.py
src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/config/: nav2_params.yaml
src/rover_description/launch/: hardware_pi.launch.py  robot_state_publisher.launch.py
src/rover_description/urdf/: rover.urdf
src/rover_hardware/: CMakeLists.txt  package.xml
src/rover_hardware/launch/: motor_bridge.launch.py
src/rover_hardware/scripts/: motor_bridge.py
src/serial_control/: CMakeLists.txt  package.xml
src/serial_control/launch/: control_launch.py
src/serial_control/scripts/: control_node.py
src/wheel_odometry/: CMakeLists.txt  package.xml
src/wheel_odometry/launch/: odom.launch.py
src/wheel_odometry/scripts/: odom_node.py
