<?xml version="1.0"?>
<package format="2">

  <name>rover_description</name>
  <version>0.0.0</version>

  <description>
    Robot description package containing URDF and TF setup for the rover
  </description>

  <maintainer email="kul@example.com">kul</maintainer>
  <license>Apache-2.0</license>
<buildtool_depend>catkin</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  
  
  

</package>

