<?xml version="1.0"?>
<package format="2">

  <name>serial_control</name>
  <version>0.0.0</version>
  <description>Serial communication node</description>

  <maintainer email="rover@todo.todo">rover</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

</package>