<?xml version="1.0"?>
<package format="2">
  <name>wheel_odometry</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kul@todo.todo">kul</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>

 
</package>
